# airflow_batch_executor

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pg.env  shared.env
airflow_home/dags/: test-dag.py
dags/: sample.py  test-dag.py
hj_plugin/: pyproject.toml
hj_plugin/hj_plugin/: plugin.py
hj_plugin/tests/: test_hj_plugin.py
src/: pyproject.toml
src/src-0.1.0/: PKG-INFO  setup.py
