[tool.poetry]
name = "hj_plugin"
version = "0.1.0"
description = ""
authors = ["josh-gree <joshua.greenhalgh@heyjobs.de>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.plugins."airflow.plugins"]
"hj_plugin" = "hj_plugin.plugin:HjPlugin"
